--- a/views/home.ejs
+++ b/views/home.ejs
@@ -357,7 +357,7 @@ var _hmt = _hmt || [];
         }
 
         @media (max-width: 768px) {
-            #area-filter-button, #city-filter-button {
+            #area-filter-button, #city-filter-button,#sort-button {
                 width: 100%;
                 margin-top: 10px;
             }
