--- a/views/login.ejs
+++ b/views/login.ejs
@@ -98,7 +98,7 @@
             </div>
             <button type="submit">登录</button>
         </form>
-        <!-- <p class="message">还没有账号？<a href="/register">注册</a></p> -->
+        <p class="message">还没有账号？<a href="/register">注册</a></p>
     </div>
 </body>
 </html>
