--- a/views/register.ejs
+++ b/views/register.ejs
@@ -92,7 +92,7 @@
                 <label for="password">密码：</label>
                 <input type="password" id="password" name="password" required>
             </div>
-            <!-- <button type="submit">注册</button> -->
+            <button type="submit">注册</button>
         </form>
         <p class="message">已有账号？<a href="/login">登录</a></p>
     </div>
