暂时移除邀请码

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -92,10 +92,10 @@
                 <label for="password">密码：</label>
                 <input type="password" id="password" name="password" required>
             </div>
-            <div>
+            <!-- <div>
                 <label for="invitationCode">邀请码：</label>
                 <input type="text" id="invitationCode" name="invitationCode" required>
-            </div>
+            </div> -->
             <button type="submit">注册</button>
         </form>
         <p class="message">已有账号？<a href="/login">登录</a></p>
