--- a/views/home.ejs
+++ b/views/home.ejs
@@ -800,5 +800,6 @@
             }
         });
     </script>
+    <script type="text/javascript" src="//js.users.51.la/21925463.js"></script>
 </body>
 </html>
