--- a/views/home.ejs
+++ b/views/home.ejs
@@ -800,6 +800,16 @@
             }
         });
     </script>
-    <script type="text/javascript" src="//js.users.51.la/21925463.js"></script>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-NQ05S3PNMS"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-NQ05S3PNMS');
+    </script>
+
 </body>
 </html>
